updated home page

--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -144,11 +144,9 @@ hr {
 
 .jumbotron {
     background-color: mintcream;
-    margin: 0;
+    margin: 0 auto;
     padding-top: 15px;
 }
-
-
 
 
 /* Home page */
