--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -29,7 +29,7 @@ h3 {
 
 main.container-fluid {
     padding: 0;
-    margin-top: 5%;
+    margin-top: 75px;
 }
 
 .title {
@@ -133,7 +133,6 @@ nav {
 #dropdown {
     padding:.5rem 0 0 0;
 }
-
 
 
 
