added search bar in templates

--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -74,12 +74,12 @@
     {% if user %}
     <div class="row">
             
-        {% for user in users %}
-        {% if user.portfolio %}
+        {% for portfolio in portfolios %}
+        {% if portfolio %}
         <div class="col-sm-6 col-md-6 col-lg-4">
             <div class="card home-portfolio-links flex-row d-flex align-items-center">
-                {% if user.portfolio.photo_url %}
-                <img class="responsive-img profile-img-home" src="{{user.portfolio.photo_url}}" alt="Avatar">
+                {% if portfolio.photo_url %}
+                <img class="responsive-img profile-img-home" src="{{portfolio.photo_url}}" alt="Avatar">
                 {% else %}
 
                 <div
@@ -88,16 +88,16 @@
                 </div>
                 {% endif %}
                 <div class="profile-info">
-                    <h3>{{user.first_name}} {{user.last_name}}</h3>
-                    <p>{{user.portfolio.profession}}</p>
-                    <a href="{% url 'user_profile' user.id %}"><button type="button"
+                    <h3>{{portfolio.user.first_name}} {{portfolio.user.last_name}}</h3>
+                    <p>{{portfolio.profession}}</p>
+                    <a href="{% url 'user_profile' portfolio.user.id %}"><button type="button"
                             class="btn btn-outline-primary">View Portfolio</button></a>
                 </div>
             </div>
         </div>
-
         {% endif %}
         {% endfor %}
+        
     </div>
     {% else %}
     <h2>There are no users with portfolios</h2>
