--- a/main_app/templates/main_app/user_profile.html
+++ b/main_app/templates/main_app/user_profile.html
@@ -39,7 +39,16 @@
 </div>
 
 <div class="container mb-5">
-    <h1 class="title">Projects</h1>
+    <div class="d-flex justify-content-between">
+        <h1 class="title">Projects</h1>
+        {% if 'profile' in request.path or user.id|stringformat:"i" in request.path %}
+        <form class="form-inline my-2 my-lg-0" method="get" action="{% url 'search_projects' user.id %}">
+            {% csrf_token %}
+            <input class="form-control mr-1" name="search_content" type="search" placeholder="Search by techs" aria-label="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </form>
+        {% endif %}
+    </div>
     <div class="row">
         
         {% if projects %}
