--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -37,17 +37,18 @@
                     </div>
                     {% for user in users %}
                     {% if user.portfolio %}
-
                     {% for p in projects %}
-
-                    <div class="carousel-item">
-                        <img src="{{p.photo_url}}" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5>{{p.project_name}}</h5>
-                            <p>By {{p.portfolio.user}}</p>
+                    
+                        <div class="carousel-item">
+                            <a href="{% url 'user_profile' p.portfolio.user.id %}">
+                                <img src="{{p.photo_url}}" class="d-block w-100" alt="...">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h5>{{p.project_name}}</h5>
+                                    <p>By {{p.portfolio.user}}</p>
+                                </div>
+                            </a>
                         </div>
-                    </div>
-
+                    
                     {% endfor %}
                     {% endif %}
                     {% endfor %}
