--- a/main_app/templates/main_app/user_profile.html
+++ b/main_app/templates/main_app/user_profile.html
@@ -4,9 +4,10 @@
 {% if user.portfolio %}
 <div class="jumbotron" id="profile">
     <div class="row">
-        <div class="col-1"></div>
+        <div class="col-md-1"></div>
         <div class="col-sm-12 col-md-5">
-            <h1 class="display-4" id="username">{{user.first_name}} {{user.last_name}} <small class="text-muted">({{user.username}})</small>
+            <h1 class="display-4" id="username">{{user.first_name}} {{user.last_name}} <small
+                    class="text-muted">({{user.username}})</small>
             </h1>
             <h4>{{user.portfolio.profession}}</h4>
             <p>{{user.portfolio.about_me}}</p>
@@ -14,25 +15,28 @@
             <p>Profile Link: <a href="{{user.portfolio.profile_link}}">{{user.portfolio.profile_link}}</a></p>
             <p>Github Link: <a href="{{user.portfolio.github_link}}">{{user.portfolio.github_link}}</a></p>
         </div>
-        <div class="col-1"></div>
+        <div class="col-md-1"></div>
         <div class="col-sm-12 col-md-5">
             {% if user.portfolio.photo_url %}
-                <div id="profile-img-box">
-                    <img class="responsive-img mb-4" id="profile-img" src="{{user.portfolio.photo_url}}" alt="Avatar">
-                </div>
+            <div id="profile-img-box">
+                <img class="responsive-img mb-4" id="profile-img" src="{{user.portfolio.photo_url}}" alt="Avatar">
+            </div>
             {% else %}
-                <div class="responsive-img mb-4 profile-icon d-flex align-items-center justify-content-center"><i class="fas fa-user"></i></div>
+            <div class="responsive-img mb-4 profile-icon d-flex align-items-center justify-content-center"><i
+                    class="fas fa-user"></i></div>
             {% endif %}
 
             {% if request.user == user %}
-                <a class="btn btn-outline-primary" data-toggle="collapse" data-target="#profile-img-upload">Edit Photo</a>
-                <form method="POST" action="{% url 'portfolio_add_photo' user.portfolio.id %}" id="profile-img-upload" class="collapse photo-form" enctype="multipart/form-data">
-                    {% csrf_token %}
-                    <input type="file" name="photo-file">
-                    <br>
-                    <input type="submit" class="btn btn-outline-success mt-2" value="Upload Photo">
-                    <a class="btn btn-outline-danger mt-2" href="{% url 'portfolio_delete_photo' user.portfolio.id %}">Delete Photo</a>
-                </form>
+            <a class="btn btn-outline-primary" data-toggle="collapse" data-target="#profile-img-upload">Edit Photo</a>
+            <form method="POST" action="{% url 'portfolio_add_photo' user.portfolio.id %}" id="profile-img-upload"
+                class="collapse photo-form" enctype="multipart/form-data">
+                {% csrf_token %}
+                <input type="file" name="photo-file">
+                <br>
+                <input type="submit" class="btn btn-outline-success mt-2" value="Upload Photo">
+                <a class="btn btn-outline-danger mt-2"
+                    href="{% url 'portfolio_delete_photo' user.portfolio.id %}">Delete Photo</a>
+            </form>
             {% endif %}
         </div>
     </div>
@@ -44,73 +48,83 @@
         {% if 'profile' in request.path or user.id|stringformat:"i" in request.path %}
         <form class="form-inline my-2 my-lg-0" method="get" action="{% url 'search_projects' user.id %}">
             {% csrf_token %}
-            <input class="form-control mr-1" name="search_content" type="search" placeholder="Search by techs" aria-label="Search">
+            <input class="form-control mr-1" name="search_content" type="search" placeholder="Search by techs"
+                aria-label="Search">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
         </form>
         {% endif %}
     </div>
     <div class="row">
-        
+
         {% if projects %}
-            {% for p in projects %}
-            <div class="col-md-6 mb-4">
-                <div class="card">
-                    {% if p.photo_url %}
-                        <img class="responsive-img card-img-top" id="project-img" src="{{p.photo_url}}" alt="Project Photo">
-                    {% else %}
-                        <img class="responsive-img " src="" alt="Project_Photo">
+        {% for p in projects %}
+        <div class="col-md-6 mb-4">
+            <div class="card">
+                {% if p.photo_url %}
+                <img class="responsive-img card-img-top" id="project-img" src="{{p.photo_url}}" alt="Project Photo">
+                {% else %}
+                <div
+                    class="responsive-img card-img-top d-flex align-items-center justify-content-center" id="project-img">
+                    <i class="fas fa-camera"></i>
+                </div>
+                {% endif %}
+                <div id="project-info">
+                    {% if request.user == user %}
+                    <a class="btn btn-outline-primary edit-photo" data-toggle="collapse"
+                        data-target="#img-upload{{p.id}}">Edit Photo</a>
+                    <form method="POST" action="{% url 'projects_add_photo' p.id %}" enctype="multipart/form-data"
+                        id="img-upload{{p.id}}" class="collapse photo-form">
+                        {% csrf_token %}
+                        <input type="file" name="photo-file">
+                        <br>
+                        <input type="submit" class="btn btn-outline-success mt-2" value="Upload Photo">
+                        <a class="btn btn-outline-danger mt-2" href="{% url 'projects_delete_photo' p.id %}">Delete
+                            Photo</a>
+                    </form>
                     {% endif %}
-                    <div id="project-info">
-                        {% if request.user == user %}
-                            <a class="btn btn-outline-primary edit-photo" data-toggle="collapse" data-target="#img-upload{{p.id}}">Edit Photo</a>
-                            <form method="POST" action="{% url 'projects_add_photo' p.id %}" enctype="multipart/form-data" id="img-upload{{p.id}}" class="collapse photo-form" >
-                                {% csrf_token %}
-                                <input type="file" name="photo-file">
-                                <br>
-                                <input type="submit" class="btn btn-outline-success mt-2" value="Upload Photo">
-                                <a class="btn btn-outline-danger mt-2" href="{% url 'projects_delete_photo' p.id %}">Delete Photo</a>
-                            </form>
-                        {% endif %}
-                        <div class="card-body">
-                            <h5 class="card-title">{{p.project_name}}</h5>
-                            <p class="card-text">{{p.description}}</p>
-                            <p class="card-text">Technologies Used: {{p.technologies}}</p>
-                            <div>
-                                <a class="btn btn-outline-primary" href="{{p.project_link}}">Github</a>
-                                <a class="btn btn-outline-primary" href="{{p.deployed_link}}">Live Project</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card-footer d-flex justify-content-between">
-                        <p class="text-muted">Project Completed: {{p.date}}</p>
-                        {% if request.user == user %}
+                    <div class="card-body">
+                        <h5 class="card-title">{{p.project_name}}</h5>
+                        <p class="card-text">{{p.description}}</p>
+                        <p class="card-text">Technologies Used: {{p.technologies}}</p>
                         <div>
-                            <a href="{% url 'projects_update' p.id %}"><button class="btn btn-outline-info">Edit</button></a>
-                            <a href="{% url 'projects_delete' p.id %}"><button class="btn btn-outline-danger">Delete</button></a>
+                            <a class="btn btn-outline-primary" href="{{p.project_link}}">Github</a>
+                            <a class="btn btn-outline-primary" href="{{p.deployed_link}}">Live Project</a>
                         </div>
-                        {% endif %}
                     </div>
                 </div>
+                <div class="card-footer d-flex justify-content-between">
+                    <p class="text-muted">Project Completed: {{p.date}}</p>
+                    {% if request.user == user %}
+                    <div>
+                        <a href="{% url 'projects_update' p.id %}"><button
+                                class="btn btn-outline-info">Edit</button></a>
+                        <a href="{% url 'projects_delete' p.id %}"><button
+                                class="btn btn-outline-danger">Delete</button></a>
+                    </div>
+                    {% endif %}
+                </div>
             </div>
-            {% endfor %}
+        </div>
+        {% endfor %}
         {% else %}
     </div>
 </div>
 <div class="jumbotron d-flex flex-column align-items-center">
     {% if 'search' in request.path %}
-        <p class="text-center">No projects found. </p>
+    <p class="text-center">No projects found. </p>
     {% else %}
     <p class="text-center">{{user}} has no projects yet. </p>
     {% endif %}
     {% if request.user == user %}
-        <div class="project-create">
-            <a class="btn btn-outline-primary mx-auto" href="{% url 'projects_create' %}"><i class="fas fa-plus"></i> Project</a>
-        </div>
+    <div class="project-create">
+        <a class="btn btn-outline-primary mx-auto" href="{% url 'projects_create' %}"><i class="fas fa-plus"></i>
+            Project</a>
+    </div>
     {% endif %}
 </div>
-    {% endif %}
+{% endif %}
 {% else %}
-<div class="jumbotron d-flex align-items-center flex-column" >
+<div class="jumbotron d-flex align-items-center flex-column">
     <h1 class="text-center">Click to create a portfolio :)</h1>
     <a class="btn btn-outline-success" href="{% url 'portfolio_create' %}">
         <i class="fas fa-plus"></i> Portfolio</a>
