--- a/main_app/templates/main_app/project_form.html
+++ b/main_app/templates/main_app/project_form.html
@@ -20,31 +20,9 @@
                     {{ field.errors }}
                 </div>
                  {% endfor %}
-
-                <!-- <div class = "form-group">
-                    <label class="control-label" for="portfolio_name">Project name:</label>
-                    <input class="form-control" id="portfolio_name" name="portfolio_name" type="text">
-                </div>
-                <div class = "form-group">
-                    <label class="control-label" for="technologies">Technologies</label>
-                    <textarea class="form-control" id="technologies" name="technologies" type="text"></textarea>
-                </div>
-                <div class = "form-group">
-                    <label class="control-label" for="deployed_link">Deployed link:</label>
-                    <input class="form-control" id="deployed_link" name="deployed_link" type="text">
-                </div>
-                <div class = "form-group">
-                    <label class="control-label" for="project_link">Project link</label>
-                    <input class="form-control" id="project_link" name="project_link" type="text">
-                </div>
-                <div class = "form-group">
-                    <label class="control-label" for="description">Description</label>
-                    <textarea class="form-control" id="description" name="description" type="text"></textarea>
-                </div>
-                 -->
                 <div class="form-group">
-                    <label class="control-label" for="date">Date</label>
-                    <input class="form-control" id="datepicker" name="date" placeholder="YYYY-MM-DD" type="text"/>
+                    <label class="control-label" for="date">Project Completed:</label>
+                    <input class="form-control" id="datepicker" name="date" placeholder="YYYY-MM-DD" type="text" autocomplete="off"/>
                 </div>
                 <input type="submit" value="Submit">
             </form>
