--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -31,12 +31,13 @@ h3 {
 
 main.container-fluid {
     padding: 0;
-    margin-top: 75px;
+    margin-top: 60px;
 }
 
 .title {
     text-align: center;
 }
+
 
 
 /* form styles */
@@ -145,8 +146,10 @@ hr {
 
 .jumbotron {
     background-color: mintcream;
-    margin: 0 auto;
-    padding-top: 15px;
+
+    padding-top: 30px;
+    padding-left: 10%;
+    padding-right: 10%;
 }
 
 
@@ -246,7 +249,8 @@ hr {
 #project-img {
     object-fit: cover;
     height: 290px;
-    background: black;
+    background-color: aliceblue;
+    font-size: 4em;
 }
 
 
@@ -281,5 +285,9 @@ hr {
 .fab {
     font-size: 1.2em;
     color: black;
+}
+
+.fab:hover {
+    color: purple;
 }
 
