--- a/main_app/templates/main_app/user_profile.html
+++ b/main_app/templates/main_app/user_profile.html
@@ -3,7 +3,7 @@
 
 {% if user.portfolio %}
 <div class="jumbotron" id="profile">
-    <div class="row">
+    <div class="row" id="profile-row">
         <div class="col-1"></div>
         <div class="col-sm-12 col-md-5">
             <h1 class="display-4" id="username">{{user.first_name}} {{user.last_name}} <small class="text-muted">({{user.username}})</small>
