--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -34,6 +34,24 @@ main.container-fluid {
     margin-top: 60px;
 }
 
+@media only screen and (max-width: 815px) {
+    main.container-fluid {
+        margin-top: 100px;
+    }
+}
+
+@media only screen and (max-width: 695px) {
+    main.container-fluid {
+        margin-top: 135px;
+    }
+}
+
+@media only screen and (max-width: 576px) {
+    main.container-fluid {
+        margin-top: 190px;
+    }
+}
+
 .title {
     text-align: center;
 }
@@ -125,20 +143,18 @@ nav {
 }
 
 
-
-
 .navbar {
     box-shadow: 0 2px 4px -1px rgba(0,0,0,0.25);
     border-radius: 10px;
-
 }
 
 #dropdown {
     padding:.5rem 0 0 0;
 }
 
-
-
+#sign-up {
+    min-width: 90px;
+}
 
 hr {
     margin: 0;
@@ -151,7 +167,6 @@ hr {
     padding-left: 10%;
     padding-right: 10%;
 }
-
 
 /* Home page */
 #welcome-box {
