--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -80,7 +80,7 @@
                 </div>
                 {% else %}
                 <li class="nav-item ml-3">
-                    <a href="{% url 'signup' %}"><button class="btn btn-outline-secondary my-2 my-sm-0" type="submit">
+                    <a href="{% url 'signup' %}"><button class="btn btn-outline-secondary my-2 my-sm-0" id="sign-up" type="submit">
                             <i class="fas fa-user-plus"></i> Sign Up</button></a>
                 </li>
                 <li class="nav-item ml-3">
